tests/fail/semantic/infixExp-3.tiger
let
      var x : int := 0
in
      x := "Hello" <> 1
end
